@@ -143,6 +143,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #25283: Attributes tm_gmtoff and tm_zone are now available on
+  all platforms in the return values of time.localtime() and
+  time.gmtime().
+
 - Issue #24454: Regular expression match object groups are now
   accessible using __getitem__.  "mo[x]" is equivalent to
   "mo.group(x)".
